<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esma_ny_hamza_namera"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/hamza"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_is_the_main_screen_for_listening_to_musics_and_songs"
        android:layout_margin="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0_00"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:layout_weight="1"/>

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_2_45"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/backward"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/play_arrow_large"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/forward"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/home"
        android:textSize="@dimen/home_size"/>

</LinearLayout>